--- a/mim/sale_mim/views/sale_view.xml
+++ b/mim/sale_mim/views/sale_view.xml
@@ -1,14 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
-	<record id="view_order_form" model="ir.ui.view">
-		<field name="name">view.order.form.inherit</field>
-		<field name="inherit_id" ref="sale.view_order_form" />
-		<field name="model">sale.order</field>
-		<field name="arch" type="xml">
-			<xpath expr="//field[@name='order_line']" position="after">
-				<button name="action_config_order_line" type="object"
-					string="Configuration sale" />
-			</xpath>
-		</field>
-	</record>
+    
+    <record id="view_order_form" model="ir.ui.view">
+        <field name="name">view.order.form.inherit</field>
+        <field name="inherit_id" ref="sale.view_order_form" />
+        <field name="model">sale.order</field>
+        <field name="arch" type="xml">
+            <xpath expr="//field[@name='order_line']//field[@name='product_id']" position="before">
+                <field name="image" widget="image" class="oe_avatar oe_left" />
+            </xpath>
+            <xpath expr="//field[@name='order_line']" position="after">
+                <button name="action_config_order_line" type="object" string="Configuration sale" />
+            </xpath>
+        </field>
+    </record>
 </odoo>
