--- a/mim/sale_mim/views/sale_view.xml
+++ b/mim/sale_mim/views/sale_view.xml
@@ -6,12 +6,23 @@
         <field name="inherit_id" ref="sale.view_order_form" />
         <field name="model">sale.order</field>
         <field name="arch" type="xml">
+            <xpath expr="//field[@name='partner_id']" position="after">
+                <field name="crm_lead_id" required="1"/>
+            </xpath>
+
             <xpath expr="//field[@name='order_line']//field[@name='product_id']" position="before">
                 <field name="image" widget="image" class="oe_avatar oe_left" />
             </xpath>
             <xpath expr="//field[@name='order_line']" position="after">
                 <button name="action_config_order_line" type="object" string="Configuration sale" />
             </xpath>
+            <xpath expr="//field[@name='order_line']/tree/field[@name='product_id']" position="before">
+                <field name="image" widget="image"  class="oe_avatar" />
+            </xpath>
+            <xpath expr="//field[@name='order_line']/tree/field[@name='name']" position="after">
+                <field name="mesure" readonly="1"/>
+            </xpath>
         </field>
     </record>
+
 </odoo>
