--- a/mim/mrp_mim/views/mrp_production_view.xml
+++ b/mim/mrp_mim/views/mrp_production_view.xml
@@ -10,12 +10,15 @@
             <xpath expr="//field[@name='state']" position="replace">
             	<field name="state" widget="statusbar" statusbar_visible="confirmed,verified,validated,progress,done"/>
             </xpath>
+            
             <xpath expr="//field[@name='bom_id']" position="after">
             	<field name="description"/>
             </xpath>
+            
             <xpath expr="//field[@name='user_id']" position="before">
             	<field name="partner_id"/>
             </xpath>
+            
             <xpath expr="/form/sheet/group" position="after">
 	     	    <group string="Données en entrée" col="2">
 	     	        <group>
@@ -24,7 +27,7 @@
 						<field name="hauteur" readonly="True"/>
 						<field name="tms" attrs="{'readonly': [('state','not in',('confirmed'))]}"/>
 						<field name="style" attrs="{'readonly': [('state','not in',('confirmed'))]}"/>
-						<field name="vitre" attrs="{'readonly': [('state','not in',('confirmed'))]}"/>
+						<field name="vitre" attrs="{'readonly': [('state','not in',('confirmed'))]}" />
 						<field name="remplissage_vitre" attrs="{'readonly': [('state','not in',('confirmed'))]}"/>
 	     	        </group>
 	     	        <group>
@@ -34,7 +37,7 @@
 						<field name="moustiquaire" attrs="{'readonly': [('state','not in',('confirmed'))]}"/>
 						<field name="division" attrs="{'readonly': [('state','not in',('confirmed'))]}"/>
 						<field name="nb_division" attrs="{'readonly': [('state','not in',('confirmed'))]}" />
-						<field name="batis_id" attrs="{'readonly': [('state','not in',('confirmed'))]}" />
+						<!--field name="batis_id" attrs="{'readonly': [('state','not in',('confirmed'))]}" /-->
 						<field name="longueur_barre" attrs="{'readonly': [('state','not in',('confirmed'))]}"/>
 						<field name="is_calculated" invisible="1"/>
 					</group>
