--- a/mim/sale_mim/views/sale_view.xml
+++ b/mim/sale_mim/views/sale_view.xml
@@ -6,10 +6,12 @@
         <field name="inherit_id" ref="sale.view_order_form" />
         <field name="model">sale.order</field>
         <field name="arch" type="xml">
+            <!--Bon de commande-->
             <xpath expr="//field[@name='partner_id']" position="after">
                 <field name="crm_lead_id" required="1"/>
             </xpath>
 
+            <!--Ligne de commande-->
             <xpath expr="//field[@name='order_line']//field[@name='product_id']" position="before">
                 <field name="image" widget="image" class="oe_avatar oe_left" />
             </xpath>
