--- a/mim/stock_mim/views/stock_picking.xml
+++ b/mim/stock_mim/views/stock_picking.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
-    
-    <!-- Picking search view -->
 
     <!-- Picking tree view -->
     <record model="ir.ui.view" id="view_stock_picking_tree">
@@ -25,6 +23,24 @@
         </field>
     </record>
 
+    <!-- Vue confirmation configuration -->
+    <record model="ir.ui.view" id="view_date_planned_form">
+        <field name="name">date.planned.form</field>
+        <field name="model">mrp.configuration</field>
+        <field name="type">form</field>
+        <field name="arch" type="xml">
+            <form string="Entrer la date plannifiée de la livraison">
+                <group>
+                    <field name="date_planned" />
+                </group>
+                <footer>
+                    <button type="object" name="create_mo_s" string="Confirmer et créer les ordres de fabrication" class="oe_highlight" /> ou
+                    <button type="object" class="oe_link" special="cancel" string="Annuler" />
+                </footer>
+            </form>
+        </field>
+    </record>
+
     <!-- Picking form view -->
     <record model="ir.ui.view" id="view_stock_picking_form">
         <field name="name">stock.picking.form.inherit</field>
@@ -32,6 +48,10 @@
         <field name="type">form</field>
         <field name="inherit_id" ref="stock.view_picking_form" />
         <field name="arch" type="xml">
+
+           <!--  <xpath expr="//field[@name='move_lines']" position="attributes">
+                  <attribute name="domain">[('id ','not in', 'bom_line_id.id')]</attribute>
+            </xpath> -->
 
             <!-- Différents dates -->
             <xpath expr="//field[@name='partner_id']" position="after">
@@ -63,14 +83,14 @@
                     class="oe_highlight"
                     groups="stock_mrp.stock_mrp_mamy"
                     type="object" />
-                  
+
                 <button name="confirm_config_mo"
                     string="Créer les ordres de fabrication"
                     class="oe_highlight"
                     groups="stock_mrp.stock_mrp_mamy"
                     type="object"
                     attrs="{'invisible': ['|',('mo_created','=',True),('state','not in',('confirmed'))]}" />
-                
+
                 <button name="view_all_mo"
                     string="Voir les ordres de fabrication"
                     class="oe_highlight"
@@ -78,6 +98,56 @@
                     attrs="{'invisible': ['|',('mo_created','=',False),('state','not in',('confirmed','partially_available','assigned','done'))]}" />
             </xpath>
 
+        </field>
+    </record>
+
+    <record model="ir.ui.view" id="view_picking_form_inherit">
+        <field name="name">picking.form.inherit</field>
+        <field name="model">stock.picking</field>
+        <field name="type">form</field>
+        <field name="inherit_id" ref="stock.view_picking_form" />
+        <field name="arch" type="xml">
+            <xpath expr="//field[@name='move_lines']" position="replace">
+                        <!-- <attribute name="on_change">_onchange_move_lines(move_lines.product_id)</attribute> -->
+                <!-- <field name="group_id" /> -->
+                <!-- <field name="product_list" invisible="1"> -->
+                <field name="move_lines" context="{'picking_type_code': picking_type_code, 'default_picking_id': id, 'form_view_ref':'stock.view_move_picking_form', 'address_in_id': partner_id, 'default_picking_type_id': picking_type_id, 'default_location_id': location_id, 'default_location_dest_id': location_dest_id}">
+                                <tree decoration-danger="state != 'done' and quantity_done > reserved_availability and show_reserved_availability" decoration-muted="scrapped == True or state == 'cancel' or (state == 'done' and is_locked == True)" string="Stock Moves" editable="bottom">
+                                    <field name="name" invisible="1"/>
+                                    <field name="origin" string="origin"/>
+                                    <field name="date_expected" invisible="1"/>
+                                    <field name="state" invisible="1" readonly="0"/>
+                                    <field name="picking_type_id" invisible="1"/>
+                                    <field name="location_id" invisible="1"/>
+                                    <field name="location_dest_id" invisible="1"/>
+                                    <field name="scrapped" invisible="1"/>
+                                    <field name="picking_code" invisible="1"/>
+                                    <field name="product_type" invisible="1"/>
+                                    <field name="show_details_visible" invisible="1"/>
+                                    <field name="show_reserved_availability" invisible="1"/>
+                                    <field name="show_operations" invisible="1" readonly="1"/>
+                                    <field name="additional" invisible="1"/>
+                                    <field name="has_move_lines" invisible="1"/>
+                                    <field name="is_locked" invisible="1"/>
+                                    <field name="product_id" required="1" attrs="{'readonly': ['|', '&amp;', ('state', '!=', 'draft'), ('additional', '=', False), ('has_move_lines', '=', True)]}" options="{'no_create_edit':True}" />
+                                    <field name="is_initial_demand_editable" invisible="1"/>
+                                    <field name="is_quantity_done_editable" invisible="1"/>
+                                    <field name="product_uom_qty" string="Initial Demand" attrs="{'readonly': [('is_initial_demand_editable', '=', False)]}"/>
+                                    <field name="reserved_availability" string="Reserved" attrs="{'column_invisible': ['|', ('parent.state','=', 'done'), ('parent.picking_type_code', '=', 'incoming')]}"/>
+                                    <field name="quantity_done" string="Done" attrs="{'readonly': [('is_quantity_done_editable', '=', False)]}"/>
+                                    <field name="product_uom" attrs="{'readonly': [('state', '!=', 'draft'), ('additional', '=', False)]}" options="{'no_open': True, 'no_create': True}" string="Unit of Measure" groups="product.group_uom"/>
+                                    <button name="action_show_details" string="Register lots, packs, location" type="object" icon="fa-list" attrs="{'invisible': [('show_details_visible', '=', False)]}" options='{"warn": true}'/>
+                                </tree>
+                            </field>
+
+            </xpath>
+            <xpath expr="//button[@name='action_toggle_is_locked']" position="after">
+                <button type="object"
+                        name="confirm_configs_mo"
+                        string="Créer les ordres de fabrication"
+                        class="oe_highlight" />
+                <button type="object" name="view_all_mo" string="Voir les ordres de fabrication" class="oe_highlight" />
+            </xpath>
         </field>
     </record>
 
